# ResearchPaperQA

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
notebooks/: demo_retrieval.ipynb
rag_chatbot/: embedder.py  generator.py  loader.py  main.py  retriever.py  vectorstore.py
tests/: test_ragchatbot_wiring.py  test_vectorstore_roundtrip.py  test_vectorstore_stats.py
