[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchpaperqa"
version = "0.1.0"
description = "A lightweight RAG demo to ask questions about research papers (PDFs)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Malak Msaaed"}]

dependencies = [
  "faiss-cpu==1.12.0",
  "huggingface-hub==0.34.4",
  "langchain==0.3.27",
  "langchain-community==0.3.29",
  "langchain-core==0.3.75",
  "langchain-huggingface==0.3.1",
  "langchain-openai==0.3.32",
  "langchain-text-splitters==0.3.11",
  "numpy==1.26.4",
  "openai==1.106.1",
  "pandas==2.3.2",
  "pdfplumber==0.11.7",
  "pypdf==6.0.0",
  "sentence-transformers==5.1.0",
  "tokenizers==0.22.0",
  "torch==2.2.2",
  "tqdm==4.67.1",
  "transformers==4.56.1",
  "streamlit==1.41.1",
]

[project.scripts]
researchpaperqa = "rag_chatbot.main:main"

[tool.setuptools]
packages = ["rag_chatbot"]
